@@ -4,7 +4,9 @@ Date: ?
   Changes:
     - New graphics for sinter unit. Resolves https://github.com/pyanodon/pybugreports/issues/588
     - The MIBC technology has been moved from logistics science to py science pack 2.
-    - Decreased the base richness of quartz ore in order to account for the new scaling resource drain rat in the crystal mine.
+    - Decreased the base richness of quartz ore in order to account for the new scaling resource drain rate in the crystal mine.
+    - The casting unit now has an inbuilt loader. Works with belt stacking technologies.
+    - Adjusted the limestone recipe. Reduced speed by 4x and increased output by 4x. This is effectively the same recipe however the new ratio is more friendly to belt stacking with stack inserters.
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.6
 Date: 2024-11-15
